maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:56: error: not enough arguments for method northRunnerMode: (sommeAngle: Int)Unit.
Unspecified value parameter sommeAngle.
                    northRunnerMode(); // while we don't find a wall at the north
                                   ^